# thejeffism

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
src/: main.rs
src/lib/: domain.rs  mod.rs  time.rs
src/lib/domain/: about.rs  card.rs  index.rs  music.rs  photography.rs  post.rs  posts.rs  projects.rs  writing.rs
static/: screen.css  scripts.js
static/posts/: 20220405.md  20220409.md  20220412.md  20220414.md  20221010.md  20221011.md  20221012.md  20221013.md  20221014.md
templates/: 20220414.html.tera  about.html.tera  base.html.tera  index.html.tera  music.html.tera  photography.html.tera  posts.html.tera  projects.html.tera  writing.html.tera
